src/objects/Interview_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Level__c</fullName>
        <label>Interview Level</label>
        <picklist>
            <picklistValues>
                <fullName>1st. Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd. Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd. Round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panelist__c</fullName>
        <label>Panelist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Candidate__c</fullName>
        <label>Related Candidate</label>
        <referenceTo>Candidate_Tracker__c</referenceTo>
        <relationshipLabel>Interview Tracker</relationshipLabel>
        <relationshipName>Interview_Tracker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Interview_Level__c</controllingField>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interview Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Related_Candidate__c</columns>
        <columns>Status__c</columns>
        <columns>Interview_Level__c</columns>
        <columns>Panelist__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>iTracker-{000000000}</displayFormat>
        <label>Interview Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>